# energy_manager

./: MANIFEST.in  README.md  cpu_freq_predictor.keras  gen_input_data.csv  main.py  pyproject.toml  read_system_data.py  requirements.txt  scaler_X.csv  scaler_X.pkl  scaler_y.pkl  system_data.csv  system_data_2.csv  system_data_cleaned.csv  train_model.py  zweite_version.py
.github/workflows/: package.yml
energy_manager/: __init__.py  data_cleaner.py  data_gen.py  predictor.py  system_data.csv  system_data_2.csv  train_model.py
src/: system_data.csv  system_data_2.csv
